<resources>
    <string name="app_name">Game</string>

    //Main Activity
    <string name="createAccountButton">Create Account</string>
    <string name="loginButton">Login</string>

    //Login, CreateAccount Activity
    <string name="loginEditText">Login</string>
    <string name="passwordEditText">Password</string>
    <string name="loginActOkButton">Login</string>
    <string name="loginActCancelButton">Cancel</string>
    <string name="createAccountOkButton">Create Account</string>

    //FirstLogin
    <string name="loggedAsTextView">Logged as: </string>
    <string name="coordinatesTextView">Random coordinates:</string>
    <string name="firstLoginTextView">Create First Village!</string>
    <string name="chosenVillageType">You have chosen village number: </string>
    <string name="firstVillageButton">CREATE VILLAGE</string>

    //GamePlay
    <string name="gamePlay">Game Play</string>
    <string name="buildingsList">Existing buildings list: </string>
    <string name="availableGoods">Available Goods: </string>
    <string name="quizGoods"> QUIZ for Goods</string>

    //Building Detail
    <string name="buildingDetailDescription">Description: </string>
    <string name="buildingDetailProduct">Product: </string>
    <string name="buildingDetailProductionTime">Production Time: </string>
    <string name="buildingDetailLevel">Current Level: </string>
    <string name="buildingDetailNeed">Need Goods: </string>
    <string name="expandBuildingBtn">Expand building (+1 level)</string>

    //Quiz
    <string name="quizHeader">What is the result?</string>
</resources>
