<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/buildingDetailDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginLeft="220dp"
        android:gravity="left|center_vertical"
        android:text="Example"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/buildingDetail1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/buildingDetailProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginLeft="216dp"
        android:gravity="left|center_vertical"
        android:text="Example"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/buildingDetail2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/buildingDetailProductionTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginLeft="216dp"
        android:gravity="left|center_vertical"
        android:text="Example"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/buildingDetail3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/buildingDetailLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginLeft="216dp"
        android:gravity="left|center_vertical"
        android:text="Example"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/buildingDetail4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/buildingDetailHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Building Name"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="301dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/buildingDetailHeader"
        app:srcCompat="@drawable/mountain_icon"
        tools:layout_editor_absoluteX="55dp" />

    <TextView
        android:id="@+id/buildingDetail1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:gravity="left|center_vertical"
        android:text="@string/buildingDetailDescription"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/buildingDetail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:gravity="left|center_vertical"
        android:text="@string/buildingDetailProduct"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buildingDetail1" />

    <TextView
        android:id="@+id/buildingDetail3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:gravity="left|center_vertical"
        android:text="@string/buildingDetailProductionTime"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buildingDetail2" />

    <TextView
        android:id="@+id/buildingDetail4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:gravity="left|center_vertical"
        android:text="@string/buildingDetailLevel"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buildingDetail3" />

    <Button
        android:id="@+id/expandBuildingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/expandBuildingBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buildingDetail4" />
</android.support.constraint.ConstraintLayout>